# l00pr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Specification.md  audiosource.h  concepts.hpp  device.cpp  device.h  generator.cpp  generator.hpp  generator_test.cpp  interpolated_test.cpp  l00pr.hpp  lane.hpp  main.cpp  note.cpp  note.hpp  noteplayer.cpp  noteplayer.hpp  notestream.cpp  notestream.hpp  samplestream.h  szar.cpp  tune.cpp  tune.hpp  util.cpp  util.hpp
examples/: after_with_test.tn  coil_whine.tn  experiment1.tn  jazzy.tn  lavender.tn  mercedes-kyrie.tn  plushies.tn  próba1.tn  sampled_test.tn  sweep.tn  test2.tn  the_sing_starts_now.tn  waterfall.tn  whitespace.tn
examples/Deltarune - queen/: queen-bass.tn  queen-instr.tn  queen-lead.tn
generators/: none.cpp  none.hpp  register.cpp  register.hpp  sine.hpp  square.hpp  triangle.cpp  triangle.hpp
plugins/: CMakeLists.txt  cosine.cpp  cosine.hpp  vesztettem.cpp  vesztettem.hpp
src/: CMakeLists.txt  arg.cpp  arg.hpp  argmgr.cpp  argmgr.hpp  audiosource.cpp  audiosource.hpp  audiosource_test.cpp  concepts.hpp  device.cpp  device.h  freq.cpp  freq.hpp  freq_test.cpp  interpolated.cpp  interpolated.hpp  interpolated_test.cpp  interpolator.hpp  parseable_base.hpp  parseable_test.cpp  plugin.cpp  plugin.hpp  plugin_mgr.cpp  plugin_mgr.hpp  pstate.cpp  pstate.hpp  range.hpp  range_test.cpp  string_convertible.hpp  util.cpp  util.hpp  util_test.cpp  writeable.hpp
src/device/: CMakeLists.txt  audiodevice.cpp  audiodevice.hpp  builtin.hpp  device.hpp  printerdevice.cpp  printerdevice.hpp  renderdevice.cpp  renderdevice.hpp
src/exceptions/: CMakeLists.txt  parse_error.cpp  parse_error.hpp
src/filter/: CMakeLists.txt  builtin.hpp  delay.hpp  dummy.hpp  feedback.hpp  filter.cpp  filter.hpp  fir.cpp  fir.hpp  gain.hpp  quantize.hpp  splitter.hpp
src/generator/: CMakeLists.txt  builtin.hpp  constant.cpp  constant.hpp  generator.cpp  generator.hpp  noise.cpp  noise.hpp  none.cpp  none.hpp  register.cpp  register.hpp  sampled.cpp  sampled.hpp  sine.cpp  sine.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp
src/player/: CMakeLists.txt  builtin.hpp  note.cpp  note.hpp  noteplayer.cpp  noteplayer.hpp  playablenote.cpp  playablenote.hpp  random_note.cpp  random_note.hpp  setnote.cpp  setnote.hpp
src/tune/: CMakeLists.txt  lane.hpp  loop.cpp  loop.hpp  notestream.cpp  notestream.hpp  set_kwd.cpp  set_kwd.hpp  tune.cpp  tune.hpp
